updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Im a former waitress who just recently got into wanting to learn about coding</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Southeast Texas</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing sports, making crafts, and studying coding is what consist of my day</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer or lawyer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Central Austin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe it is an intense skill that will be useful to learn and also could be working from home</p>
     </section>
 
     <footer id="footer">
