edited an answer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Central Austin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I believe it is an intense skill that will be useful to learn and also could be working from home</p>
+      <p>I believe it is an intense skill that will be useful to learn and also could be done by working from home</p>
     </section>
 
     <footer id="footer">
